# sdm

./: .gitignore  ARCHITECTURE.md  README.md  ROADMAP.md  STATUS.md  TPU_RESOURCES.md  pyproject.toml
.tpu/: README.md  _lib.sh  provision_all.sh  provision_dvector.sh  provision_emotion2vec.sh  provision_mpm.sh  provision_mwhisper.sh  provision_pitch.sh  provision_probes.sh  provision_speaking_rate.sh  provision_w2v2_asr.sh  provision_wespeaker.sh  teardown.sh
analysis/head_eval/smoke-xlsr-cpu/: head_eval.csv  head_eval.json
analysis/probes/20260428T150333Z/: analyze.py  best_layer_indices.csv  best_layer_matrix.csv  matrix.json  r2_full_long.csv  summary.txt
analysis/probes/20260507T073739Z/: best_layer_indices_mlp.csv  best_layer_indices_ridge.csv  best_layer_matrix_mlp.csv  best_layer_matrix_ridge.csv  manifest.json  matrix.json  r2_full_long.csv  summary.txt  wandb_run_id.txt
configs/: finetune_allosaurus.yaml  finetune_dvector.yaml  finetune_dvector_wristband.yaml  finetune_emotion2vec.yaml  finetune_emotion2vec_wristband.yaml  finetune_generic.yaml  finetune_generic_gaussian_ablation.yaml  finetune_intelligibility.yaml  finetune_mpm.yaml  finetune_mpm_wristband.yaml  finetune_mwhisper.yaml  finetune_mwhisper_wristband.yaml  finetune_pitch.yaml  finetune_pitch_wristband.yaml  finetune_speaking_rate.yaml  finetune_speaking_rate_wristband.yaml  finetune_tiny.yaml  finetune_w2v2_asr.yaml  finetune_w2v2_asr_wristband.yaml  finetune_wespeaker.yaml  finetune_xlsr.yaml  finetune_xlsr_fairseq.yaml  finetune_xlsr_fairseq_wristband.yaml  finetune_xlsr_wristband.yaml  pretrain_base.yaml  pretrain_base_gaussian.yaml
scripts/: _tpu_common.sh  analyze_probes.py  consolidate_weights.py  evaluate_finetune_heads.py  extract_teacher_targets.py  launch_tpu_pretrain.sh  probe_neucodec.py  request_tpus.sh  request_tpus_wristband.sh  run_allosaurus.sh  run_dvector.sh  run_finetune.sh  run_linear_probes.py  run_mpm.sh  run_mwhisper.sh  run_pitch.sh  run_probes.sh  run_probes_local.sh  run_w2v2_asr.sh  run_wespeaker.sh  run_xlsr.sh
scripts/tpu/: bake_vm.sh  provision_test_vm.sh  request_until_available.sh  sdm_tpu.py  smoke_test.sh
sdm/: dotenv.py
sdm/data/: neucodec_dataset.py  streaming_emilia.py  teacher_cache.py  teacher_dataset.py
sdm/data/teachers/: __init__.py  allosaurus_speaking_rate.py  dvector_torchscript.py  emotion2vec.py  g2p_speaking_rate.py  hf_ctc.py  hf_ssl.py  mpm.py  pyworld_f0.py  wespeaker.py  whisper_encoder.py
sdm/eval/: correlate_with_mos.py  ttsds_factor_eval.py
sdm/losses/: mlm.py  wristband_gaussian.py
sdm/modeling/: deberta_neucodec.py  distill_model.py  distillation_heads.py  wav2vec2_fairseq.py
sdm/train/: finetune.py  io.py  preempt.py  pretrain.py  run_distill.py  run_pretrain.py  wandb_utils.py  xla_utils.py
tests/: test_allosaurus_speaking_rate.py  test_correlate_with_mos.py  test_distill_model.py  test_distillation.py  test_dvector.py  test_emotion2vec.py  test_g2p_speaking_rate.py  test_hf_ctc.py  test_mlm_loss.py  test_model_smoke.py  test_mpm.py  test_neucodec_dataset.py  test_pyworld_f0.py  test_run_distill_config.py  test_run_distill_loop.py  test_streaming_emilia.py  test_teacher_cache.py  test_teachers.py  test_ttsds_adapter.py  test_wav2vec2_fairseq.py  test_wespeaker.py  test_whisper_encoder.py  test_wristband_gaussian.py  test_xla_utils.py
